# explainable-review-recommender

./: pyproject.toml
configs/: config.yaml  configs.yaml
src/: build_index.py  eval.py  prepare_data.py  serve.py  train.py
src/recsys/: data.py  explain.py  metrics.py  model.py
